# harf-desktop

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h  widget.h
